fix font size and letter spacing

--- a/docs/css/syle.css
+++ b/docs/css/syle.css
@@ -13,6 +13,7 @@
 body {
   font-family: "arconregular", system-ui, -apple-system, "Helvetica Neue", sans-serif;
   line-height: 1.2;
+  letter-spacing: 1px;
   font-weight: normal;
   color: #111;
   max-height: 100vh;
@@ -32,6 +33,7 @@ body::-webkit-scrollbar {
 }
 
 a {
+  font-size: 1.2rem;
   text-decoration: none;
   color: #111111;
   -webkit-user-drag: none;
@@ -44,7 +46,11 @@ h2 {
 }
 
 p {
-  letter-spacing: 1px;
+  font-size: 1rem;
+}
+
+h2 {
+  font-size: 1.2rem;
 }
 
 .anchor {
@@ -71,11 +77,6 @@ p {
 .nav div {
   display: flex;
   gap: 1rem;
-}
-
-.nav a {
-  /* font-weight: 400; */
-  font-size: 1.3rem;
 }
 
 /* photo gallery */
@@ -105,14 +106,6 @@ main {
   gap: 2rem;
 }
 
-.text-col h2 {
-  font-size: 1.3rem;
-}
-
-.text-col p {
-  font-size: 1.1rem;
-}
-
 /* footer */
 
 footer {
@@ -125,8 +118,7 @@ footer {
 }
 
 footer a {
-  font-size: 1.1rem;
-  letter-spacing: 1px;
+  font-size: 1rem;
 }
 
 .license-icons {
@@ -137,7 +129,7 @@ footer a {
 }
 
 .license-icons img {
-  width: 0.9rem;
+  width: 0.8rem;
 }
 
 /* collection page */
@@ -152,7 +144,6 @@ footer a {
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  font-size: 1.3rem;
   margin-top: 50vh;
   transform: translate(0, -50%);
 }
@@ -169,11 +160,4 @@ footer a {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-}
-.about div h2 {
-  font-size: 1.3rem;
-}
-.about div p {
-  font-size: 1.1rem;
-  letter-spacing: 1px;
 }
